# QtImageService

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp
